<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_photo_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/full_size_product_image"
        tools:src="@drawable/image_placeholder"/>

    <TextView
        android:id="@+id/tv_index"
        style="@style/AccentSmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_photo_product"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        tools:text="#777"/>

    <LinearLayout
        android:id="@+id/ll_product_description_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_photo_product"
        android:layout_margin="@dimen/material_component_dialogs_padding_around_content_area"
        android:orientation="vertical"
        >

        <TextView
            style="@style/GreySmallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/tv_product_title"
            style="@style/DarkLargeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Terminator T-800"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/material_component_cards_supporting_text_top_padding"
            android:background="@color/dividerColor"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_component_cards_supporting_text_top_padding"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                style="@style/GreySmallText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:text="@string/product_price"/>

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1.5"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="$777"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/material_component_cards_supporting_text_top_padding"
            android:background="@color/dividerColor"
            android:visibility="visible"/>

        <TextView
            style="@style/GreySmallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_component_cards_supporting_text_top_padding"
            android:text="@string/product_description"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/tv_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="The Series 800 Terminator is a type of Terminator mass produced by Skynet.
            Individual Terminators within the series are often referred to as T-800s"/>
    </LinearLayout>

    <View
        android:id="@+id/v_shadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@+id/ll_product_description_container"
        android:background="@drawable/shadow"/>

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/v_shadow"
        android:orientation="vertical">

        <Button
            android:id="@+id/b_update_product_status"
            style="@style/AccentButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/save_product"
            android:textAllCaps="true"/>
    </LinearLayout>
</RelativeLayout>